Fixes an issue with the fill-text-background mixin
There was an odd issue that was preventing the fill-text-background
mixin from working properly in a webkit based browser. If you flip
the statements in the supports condition everything seems to work
fine.

This also adjusts an issue where icons were getting cut off inside
of buttons due to a mismatch in line height.

--- a/base/_mixins.scss
+++ b/base/_mixins.scss
@@ -38,7 +38,7 @@
   // sass-lint:disable-block no-vendor-prefixes property-sort-order
   color: $color;
 
-  @supports (-webkit-background-clip: text) or (background-clip: text) {
+  @supports (background-clip: text) or (-webkit-background-clip: text) {
     @if ($fill) {
       background: $fill;
       background-clip: text;
